--- a/index.html
+++ b/index.html
@@ -130,6 +130,70 @@ blockquote,#education,#awards,.contact-item,.publication,.skills,.interests { pa
                 <div class="row">
                   <div class="details">
                     <div class="where">
+                      Detechgene GmbH
+                      <div class="pull-right">
+                        Aachen, Germany
+                      </div>
+                    </div>
+                    <div class="address">
+                      <a href="https:&#x2F;&#x2F;www.detechgene.com&#x2F;" target= "_blank"><i class="fas fa-globe ico"></i> https:&#x2F;&#x2F;www.detechgene.com&#x2F;</a>
+                    </div>
+                    <div class="year">February 2025 – Present</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="job-details col-xs-11">
+                    <div class="profession">Development & Production Engineer (Full-Time)</div>
+                    <div class="description">
+                      Responsible for the development, optimization, and production of electronic systems within the technical development team and the supervision of production and quality processes across the entire product lifecycle.
+                      <div class="highlights">Highlights</div>
+                      <ul class="list-group">
+                        <li class="list-group-item">Design and optimization of electronic components as well as hardware- and software-based solutions.</li>
+                        <li class="list-group-item">Development, implementation, and validation of PCBs, including prototyping, functional testing, and debugging.</li>
+                        <li class="list-group-item">Execution of quality control (QC) procedures for manufactured components and supplier parts in accordance with defined quality standards.</li>
+                        <li class="list-group-item">Creation, maintenance, and structured management of technical documentation using common digital tools.</li>
+                        <li class="list-group-item">Collaboration in projects and working groups, with close coordination between development, production, and management.</li>
+                        <li class="list-group-item">Support in IT-related topics and contribution to the setup and continuous improvement of the quality management system.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="job clearfix">
+                <div class="row">
+                  <div class="details">
+                    <div class="where">
+                      Detechgene GmbH
+                      <div class="pull-right">
+                        Aachen, Germany
+                      </div>
+                    </div>
+                    <div class="address">
+                      <a href="https:&#x2F;&#x2F;www.detechgene.com&#x2F;" target= "_blank"><i class="fas fa-globe ico"></i> https:&#x2F;&#x2F;www.detechgene.com&#x2F;</a>
+                    </div>
+                    <div class="year">November 2025 – January 2026</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="job-details col-xs-11">
+                    <div class="profession">Prototyping Engineer (Part-Time)</div>
+                    <div class="description">
+                      Led hands-on prototyping, development, firmware-related tasks, and functional testing.
+                      <div class="highlights">Highlights</div>
+                      <ul class="list-group">
+                        <li class="list-group-item">Designed, assembled, and validated electronic prototypes (MVPs), ensuring functional and integration readiness.</li>
+                        <li class="list-group-item">Led the development of PCBs, from schematic design to fabrication, bring-up, and functional verification.</li>
+                        <li class="list-group-item">Conducted systematic hardware testing and debugging using various validation and measurement methods.</li>
+                        <li class="list-group-item">Electronics-related development, embedded programming tasks, and device preparation for product packages in compliance with EU standards.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="job clearfix">
+                <div class="row">
+                  <div class="details">
+                    <div class="where">
                       INFORM GmbH
                       <div class="pull-right">
                         Aachen, Germany
@@ -138,7 +202,7 @@ blockquote,#education,#awards,.contact-item,.publication,.skills,.interests { pa
                     <div class="address">
                       <a href="https:&#x2F;&#x2F;www.inform-software.com&#x2F;" target= "_blank"><i class="fas fa-globe ico"></i> https:&#x2F;&#x2F;www.inform-software.com&#x2F;</a>
                     </div>
-                    <div class="year">March 2022 – Present</div>
+                    <div class="year">March 2022 – October 2025</div>
                   </div>
                 </div>
                 <div class="row">
